<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="50dp"
    android:paddingEnd="30dp"
    android:paddingStart="30dp"
    android:background="@color/colorPrimary2"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:layout_marginTop="-11dp"
        android:textColor="@color/colorTexIcon"
        android:textStyle="bold"
        android:gravity="center"/>
    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/textLogin"
        android:src="@drawable/leaf"
        android:contentDescription="@string/tofo" />
    
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_marginTop="20dp"
        android:layout_below="@id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorTexIcon"
        >
        <EditText
            android:id="@+id/emailLog"
            android:hint="@string/email"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimaryText"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passLayout"
        android:layout_width="match_parent"
        android:layout_below="@id/emailLayout"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/colorTexIcon"
        app:passwordToggleEnabled="true"
        >
        <EditText
            android:id="@+id/passLo"
            android:hint="@string/pass"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>
    
    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_below="@id/passLayout"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passLayout"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_style"
        android:text="@string/login"
        android:textColor="@color/colorTexIcon"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/registre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/sign_in"
        android:layout_below="@id/btn_login"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="@color/colorTexIcon"
        />

</RelativeLayout>