<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imagen_perfil"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/leaf"
        />

    <Button
        android:id="@+id/bton_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ActionButton.CloseMode"
        android:text="@string/editar_foto"
        android:layout_below="@id/imagen_perfil"
        android:layout_centerHorizontal="true"
        />
    <LinearLayout
        android:id="@+id/layout_text"
        android:layout_below="@id/bton_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:weightSum="2"
        android:orientation="horizontal">
        <ImageView
            android:src="@mipmap/person"
            android:layout_weight="1"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:contentDescription="@string/tofo"
            />
        <EditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:layout_weight="1"
            android:inputType="textPersonName"/>
    </LinearLayout>
    <LinearLayout
        android:layout_below="@id/layout_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:weightSum="2"
        android:orientation="horizontal">
        <ImageView
            android:src="@mipmap/email"
            android:layout_weight="1"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:contentDescription="@string/tofo" />
        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_weight="1"
            android:inputType="textEmailAddress"/>
    </LinearLayout>

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textColor="@color/colorTexIcon"
        android:background="@drawable/button_style"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"/>


</RelativeLayout>