<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <androidx.cardview.widget.CardView
        android:id="@+id/postearCard"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="15dp"
            >
            <TextView
                android:id="@+id/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryText"
                android:textSize="18sp"
                android:text="@string/escribe_el_titulo_de_tu_post"/>
            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/titulo"
                android:layout_below="@id/textTitle"
                android:inputType="text"
                />
            <TextView
                android:id="@+id/textBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:textColor="@color/colorPrimaryText"
                android:textSize="18sp"
                android:text="@string/escriba_el_cuerpo_de_tu_post"/>
            <EditText
                android:id="@+id/body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cuerpo"
                android:layout_below="@id/textBody"
                android:inputType="text" />
            <Button
                android:id="@+id/btnpu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_style"
                android:textColor="#fff"
                android:text="@string/publicar"
                android:layout_below="@id/body"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/carposts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/postearCard"
            >
            <ListView
                android:id="@+id/listaPost"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </androidx.cardview.widget.CardView>


    </RelativeLayout>

