<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imagetaller"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:src="@drawable/centroreciclado"
            android:contentDescription="@string/tofo" />
        <TextView
            android:id="@+id/tallername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/imagetaller"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/reclar_es_vacano"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryText"
            />
        <RatingBar
            android:id="@+id/ratingtall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.Widget.AppCompat.RatingBar.Small"
            android:layout_alignStart="@id/tallername"
            android:layout_below="@id/tallername"
            android:layout_marginTop="10dp"
            android:rating="3"
            />
        <TextView
            android:id="@+id/dir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/tallername"
            android:layout_below="@id/ratingtall"
            android:text="@string/fecha_pub"
            android:layout_marginTop="10dp"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>