<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imagepost"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:src="@drawable/centroreciclado"
            android:contentDescription="@string/tofo" />
        <TextView
            android:id="@+id/postTittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/imagepost"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/reclar_es_vacano"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryText"
            />
        <RatingBar
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.Widget.AppCompat.RatingBar.Small"
            android:layout_alignStart="@id/postTittle"
            android:layout_below="@id/postTittle"
            android:layout_marginTop="10dp"
            android:rating="3"
            />
        <TextView
            android:id="@+id/fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/postTittle"
            android:layout_below="@id/rating"
            android:text="@string/fecha_pub"
            android:layout_marginTop="10dp"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>